--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,281 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+html,body{
+  font-family: 'Poppins', sans-serif;
+  background-color:#200101;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #210002; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #210002; 
+}
+
+#textblock {
+  background-color: #210002;
+  height: 100vh;
+}
+
+#textblock-container {
+  width: 50%;
+  margin: 0 auto;
+  padding-top: 70px;
+}
+
+#textblock-title {
+  color: #ffaf1b;
+  font-size: 35px;
+  font-weight: 600;
+  font-family: "Helvetica Neue";
+}
+
+#textblock-content {
+  color: #ffaf1b;
+  font-size: 20px;
+}
+
+#textblock-footer {
+  color: #ffaf1b;
+  font-size: 15px;
   font-weight: 400;
+  position: fixed;
+  width: 100%;
+  bottom: 0px;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  margin-bottom: 20px;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+#textblock-devsense {
+  text-decoration: none;
+  color: #ffaf1b;
+  font-size: 15px;
+  font-weight: 600;
 }
 
-body {
+.animation, .animation_layer {
+	height: 1000px;
+}
+
+.animation {
+  display: block;
+	position: relative;
+	z-index: 10;
+}
+
+.animation_layer {
+	background-position: bottom center;
+	background-size: auto 1038px;
+	background-repeat: repeat-x;
+	width: 100%;
+	position: absolute;
+}
+.animation_layer.parallax {
+	position: fixed;
+}
+#artback {
+  background-image: url(./assets/background.png);
+}
+#artback:after {
+  content: '';
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  height: 20%;
+  bottom: 0px;
+  background: linear-gradient(to top, #200101 100%, transparent);
+  pointer-events: none;
+}
+#mountain {
+  background-image: url(./assets/mountains.png);
+}
+#mountain:after {
+  content: '';
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  height: 20%;
+  bottom: 0px;
+  background: linear-gradient(to top, #200101 100%, transparent);
+  pointer-events: none;
+}
+#jungle1 {
+  background-image: url(./assets/jungle1.png);
+}
+#jungle1:after {
+  content: '';
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  height: 20%;
+  bottom: 0px;
+  background: linear-gradient(to top, #200101 100%, transparent);
+  pointer-events: none;
+}
+#jungle2 {
+  background-image: url(./assets/jungle2.png);
+}
+#jungle2:after {
+  content: '';
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  height: 20%;
+  bottom: 0px;
+  background: linear-gradient(to top, #200101 100%, transparent);
+  pointer-events: none;
+}
+#jungle3 {
+  background-image: url(./assets/jungle3.png);
+}
+#jungle3:after {
+  content: '';
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  height: 20%;
+  bottom: 0px;
+  background: linear-gradient(to top, #200101 50%, transparent);
+  pointer-events: none;
+}
+#jungle4 {
+  background-image: url(./assets/jungle4.png);
+}
+#jungle4:after {
+  content: '';
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  height: 20%;
+  bottom: 0px;
+  background: linear-gradient(to top, #200101 20%, transparent);
+  pointer-events: none;
+}
+#jungle5 {
+  background-image: url(./assets/jungle5.png);
+}
+#jungle5:after {
+  content: '';
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  height: 20%;
+  bottom: 0px;
+  background: linear-gradient(to top, #200101 0%, transparent);
+  pointer-events: none;
+}
+.parallax-heading{
+  font-size: 4rem;
+  text-align:center;
+  margin-top:18%;
+  color: #FFFAEC;
+}
+.parallax-sub-heading{
+  font-size: 1.15rem;
+  text-align:center;
+  margin-top:-3.5%;
+  color: #A57800;
+}
+.p-4{
+  padding:4%
+}
+.text-white{
+  color: #fff;
+}
+.bg-brown{
+  background-color:#200101;
+}
+.about-section{
+  background-color:#200101;
+  height: 100vh;
+}
+.about-section >.about-title{
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 22px;
+}
+.about-section>.about-heading{
+  font-size: 1.5rem;
+  font-weight: 200;
+}
+.about-section>.about-description{
+  font-size: 1rem;
+  font-weight: 200;
+}
+.quote {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background: #ffffff0f;
+  padding: 0.5em;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.quote figcaption,
+.quote blockquote {
+  margin: 1em;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@media (max-width:996px){
+  .parallax-heading{
+    font-size: 2.8rem;
+    text-align:center;
+    margin-top:88%;
+    color: #FFFAEC;
   }
-  a:hover {
-    color: #747bff;
+  .parallax-sub-heading{
+    font-size: 1rem;
+    text-align:center;
+    margin-top:-8%;
+    color: #4B4B4B;
   }
-  button {
-    background-color: #f9f9f9;
+  .p-4{
+    padding:8%
   }
+  .about-section{
+    background-color:#200101;
+    height: 100vh;
+  }
+  .about-section >.about-title{
+    font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 44px;
+  }
+  .about-section>.about-heading{
+    font-size: 1.2rem;
+    font-weight: 400;
+  }
+  .about-section>.about-description{
+    font-size: 0.9rem;
+    font-weight: 200;
+  }
+  ::-webkit-scrollbar {
+    display: none;
+    width: 10px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #210002; 
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #210002; 
+  }
+
 }
